# bazel

./: BUILD.bazel  MODULE.bazel  README.md  databricks.yml  demo.ipynb  pyproject.toml  requirements-dbc.txt  requirements-pyspark.txt  requirements_lock.txt
.databricks/: .databricks.env
.databricks/bundle/dev/: vscode.overrides.json
.github/workflows/: ci-workflow.yml
resources/jobs/: job.yml
resources/pipelines/: demopipeline.yml
resources/variable/: variable.yml
src/: databricks.yml  service.py  utils.py
src/notebook/: DemoBoeing.ipynb  ingest.ipynb  mm_new_11.ipynb  test0903.ipynb  test310.ipynb  test_mm.ipynb
src/pipeline/demopipeline/: README.md
src/pipeline/demopipeline/transformations/: trans.py
src/pipeline/demopipeline/utilities/: utils.py
tests/: databricks.yml  test_service.py  test_something.py  test_utils.py
workflows/: CD-Workflow.yml  cd workflow release.yml  cd-workflow-param.yml  cd_workdlow_param2test.yml  ci-workflow-manually.yml  ci-workflow.yml
