load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

py_library(
    name = "src_lib",
    srcs = [
        "src/__init__.py",
        "src/utils.py",
        "src/service.py",
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_utils",
    srcs = ["tests/test_utils.py"],
    deps = [
        ":src_lib",
    ],
    imports = ["."],
)

py_test(
    name = "test_service",
    srcs = ["tests/test_service.py"],
    deps = [
        ":src_lib",
    ],
    imports = ["."],
)