load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "src_lib",
    srcs = [
        "src/__init__.py",
        "src/utils.py",
        "src/service.py",
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_utils",
    srcs = ["tests/test_utils.py"],
    main_module = "pytest",
    args = ["tests/test_utils.py", "-q"],
    deps = [
        ":src_lib",
        requirement("pytest"),
    ],
    imports = ["."],
)

py_test(
    name = "test_service",
    srcs = ["tests/test_service.py"],
    main_module = "pytest",
    args = ["tests/test_service.py", "-q"],
    deps = [
        ":src_lib",
        requirement("pytest"),
    ],
    imports = ["."],
)